--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
 				<p>Your Cities, Your Pix</p>
 			</div>
 		</header>
-			<div class="container">
-				<form>
-					<input type="text" id="city-type" placeholder="Enter a city name...">
-					<input type="submit" value="Update" id="submit-btn">
-				</form>
-			</div>
-			
-			<script src="js/jquery-2.1.4.js"></script>
+
+		<div class="container">
+			<form>
+				<input type="text" id="city-type" placeholder="Enter a city name...">
+				<input type="submit" value="Update" id="submit-btn">
+			</form>
+		</div>
+		
+		<script src="js/jquery-2.1.4.js"></script>
+	    <script src="js/index.js"></script>	
 	</body>
 </html>
